--- a/client/webUI/src/app/shared/aside/aside.component.html
+++ b/client/webUI/src/app/shared/aside/aside.component.html
@@ -1,7 +1,7 @@
 <!-- Sidebar -->
 <nav class="sidebar bg-dark shadow-sm h-100">
     <a [routerLink]="['/admin/dashboard']" class="d-block text-white p-3 text-decoration-none">Dashboard</a>
-    <a [routerLink]="['/admin/code-vault']" class="d-block text-white p-3 text-decoration-none">Code Vault</a>
+    <a [routerLink]="['/admin/generate-emp-code']" class="d-block text-white p-3 text-decoration-none">Generate EmpCode</a>
     <a [routerLink]="['/admin/gift-inventory']" class="d-block text-white p-3 text-decoration-none">Gift Inventory</a>
     <a [routerLink]="['/admin/employee-picks']" class="d-block text-white p-3 text-decoration-none">Employee Picks</a>
     <a [routerLink]="['/admin/product-reports']" class="d-block text-white p-3 text-decoration-none">Product Reports</a>
