--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -21,7 +21,7 @@
                 <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
                     <mat-card-content class="d-block">
                         <!-- form -->
-                        <form [formGroup]="addGiftItemForm" (ngSubmit)="onSubmit()">
+                        <form [formGroup]="addEmployeeCodeForm" (ngSubmit)="generateCode()">
                             <h4 class="fw-bold mb-1">Employee Name</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
                                 <input matInput formControlName="employeeName" />
@@ -54,10 +54,15 @@
                                 <mat-error>This is Required</mat-error>
                             </mat-form-field>
                             <div class="mt-2">
-                                <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2">
+                                <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2" (click)="generateCode()">
                                     <mat-icon>celebration</mat-icon>Generate employee Code
                                 </button>
                             </div>
+
+                            <div *ngIf="generatedCode" >
+                                <h3>Generated Employee Code:</h3>
+                                <p>{{ generatedCode }}</p>
+                              </div>
                         </form>
                         <!-- /form -->
                     </mat-card-content>
