changes in add emp code

--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.css
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.css
@@ -4,3 +4,17 @@
       left: -140px;
       top: -65px;
   }
+
+  .gift-man{
+    bottom: -12px;
+    left: 10px;
+  }
+
+  .emp-code-card{
+    margin-top: 200px;
+  }
+
+  .emp-details{
+    margin-left: 250px;
+  }
+  
