--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
@@ -57,7 +57,15 @@
         <ng-container matColumnDef="Action">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Action</th>
           <td mat-cell *matCellDef="let element">
-            <div class="d-flex">              
+            <div class="d-flex">
+              <span routerLink="/admin/edit-emp-code/{{ element.position }}"
+              class="me-2 border border-light p-2 shadow-sm table-action-buttons cursor-pointer">
+              <svg width="16" height="16" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M1.287 8.208a.247.247 0 0 1 .348 0l2.111 2.106a.246.246 0 0 1-.099.408L.485 11.773a.245.245 0 0 1-.311-.311l1.054-3.156a.25.25 0 0 1 .06-.098zm6.498-6.49a.253.253 0 0 1 .348 0l2.109 2.105a.245.245 0 0 1 0 .348L4.619 9.78a.247.247 0 0 1-.349 0L2.16 7.677a.246.246 0 0 1 0-.348zM9.017.49a1.782 1.782 0 0 1 2.457 0 1.733 1.733 0 0 1 0 2.45l-.352.353a.247.247 0 0 1-.348 0L8.666 1.189a.246.246 0 0 1 0-.347z"
+                  fill="#FCA500" fill-rule="evenodd" />
+              </svg>
+            </span>              
               <span (click)="openDialog()" class="border border-light p-2 shadow-sm table-action-buttons cursor-pointer">
                 <svg width="16" height="16" viewBox="0 0 12.375 13.75" xmlns="http://www.w3.org/2000/svg">
                   <path
