changes in add emp code

--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -14,7 +14,7 @@
                         <mat-card-content class="d-block">
                             <div>
                                 <div class="position-absolute gift-man">
-                                    <img src="assets/images/gift-man.png" width="200" height="200" alt="">
+                                    <img src="assets/images/gift-man.png"  alt="">
                                 </div>
                                 <div class="emp-details">
                                     <div class="fw-bold">{{
@@ -76,10 +76,10 @@
                                 </button>
                             </div>
 
-                            <div *ngIf="generatedCode">
+                            <!-- <div *ngIf="generatedCode">
                                 <h3>Generated Employee Code:</h3>
                                 <p>{{ generatedCode }}</p>
-                            </div>
+                            </div> -->
                             <div class="mt-4">
                                 Note: You can regenerate the employee code upto 10 times only.
                             </div>
