--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -30,10 +30,16 @@
                                             {{ generatedCode|| "xxxxxxxxxx"}}
                                         </div>
                                     </div>
+                                    <div class="d-flex align-items-center">
+                                        <a mat-flat-button [routerLink]="['/admin/generate-emp-code']"
+                                        class="bg-danger py-3 shadow-sm button-mh-45 me-2 w-50"><mat-icon>close</mat-icon>
+                                        <span>Decline
+                                        </span></a>
                                     <a mat-flat-button [routerLink]="['/admin/generate-emp-code']"
-                                        class="bg-success py-3 shadow-sm button-mh-45 w-100"><mat-icon>check</mat-icon>
+                                        class="bg-success py-3 shadow-sm button-mh-45 w-50"><mat-icon>check</mat-icon>
                                         <span>Approve
                                         </span></a>
+                                    </div>
                                 </div>
                             </div>
                         </mat-card-content>
