--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -26,12 +26,13 @@
                                     </div>
                                     <div class="border-bottom border-light mb-4">
                                         <div class="emp-code-label">Employee Code</div>
-                                        <div class="emp-code-data fw-bold text-primary">
+                                        <span class="emp-code-data fw-bold text-primary fs-12">
                                             {{ generatedCode|| "xxxxxxxxxx"}}
-                                        </div>
+                                        </span>
+                                        <span><mat-icon matSuffix>content_copy</mat-icon></span>
                                     </div>
                                     <div class="d-flex align-items-center">
-                                        <a mat-flat-button [routerLink]="['/admin/generate-emp-code']"
+                                        <a mat-flat-button (click)="decline()"
                                         class="bg-danger py-3 shadow-sm button-mh-45 me-2 w-50"><mat-icon>close</mat-icon>
                                         <span>Decline
                                         </span></a>
