--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -10,7 +10,7 @@
                         Create,<span class="text-primary"> EmpCode!</span>
                     </div>
                     <p>Quickly craft unique employee codes!</p>
-                    <mat-card class="bg-white shadow-sm emp-code-card p-3  position-relative" appearance="outlined">
+                    <!-- <mat-card class="bg-white shadow-sm emp-code-card p-3  position-relative" appearance="outlined">
                         <mat-card-content class="d-block">
                             <div>
                                 <div class="position-absolute gift-man">
@@ -44,7 +44,7 @@
                                 </div>
                             </div>
                         </mat-card-content>
-                    </mat-card>
+                    </mat-card> -->
                 </div>
             </div>
             <!-- /image-section -->
@@ -87,7 +87,7 @@
                             </mat-form-field>
                             <div class="mt-2">
                                 <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2"
-                                    (click)="generateCode()">
+                                    (click)="generateCode()" (click)="openDialog()">
                                     <mat-icon>celebration</mat-icon>Generate employee Code
                                 </button>
                             </div>
@@ -109,3 +109,41 @@
     <!-- /main-section -->
 </section>
 <!-- /container-section -->
+
+<!-- dialog -->
+<ng-template #content>    
+    <mat-dialog-content>
+        <div>
+            <div class="position-absolute gift-man">
+                <img src="assets/images/gift-man.png" alt="" height="325px" width="325px">
+            </div>
+            <div class="emp-details">
+                <div class="border-bottom border-light mb-4">
+                    <div class="emp-code-label">Employee Name</div>
+                    <div class="emp-code-data fw-bold text-primary">
+                        {{
+                            dialogEmployeeName|| "xxxxx xxxx"}}
+                    </div>
+                </div>
+                <div class="border-bottom border-light mb-4">
+                    <div class="emp-code-label">Employee Code</div>
+                    <span class="emp-code-data fw-bold text-primary fs-12">
+                        {{ generatedCode|| "xxxxxxxxxx"}}
+                    </span>
+                    <span><mat-icon matSuffix>content_copy</mat-icon></span>
+                </div>                
+            </div>
+        </div>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+        <a mat-flat-button (click)="decline()"
+        class="bg-danger py-3 shadow-sm button-mh-45 me-2 w-50" [mat-dialog-close]="true"><mat-icon>close</mat-icon>
+        <span>Decline
+        </span></a>
+    <a mat-flat-button [routerLink]="['/admin/generate-emp-code']"
+        class="bg-success py-3 shadow-sm button-mh-45 w-50"><mat-icon>check</mat-icon>
+        <span>Approve
+        </span></a>
+    </mat-dialog-actions>
+  </ng-template>
+  <!-- /dialog -->
