--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -10,41 +10,9 @@
                         Create,<span class="text-primary"> EmpCode!</span>
                     </div>
                     <p>Quickly craft unique employee codes!</p>
-                    <!-- <mat-card class="bg-white shadow-sm emp-code-card p-3  position-relative" appearance="outlined">
-                        <mat-card-content class="d-block">
-                            <div>
-                                <div class="position-absolute gift-man">
-                                    <img src="assets/images/gift-man.png" alt="" height="325px" width="325px">
-                                </div>
-                                <div class="emp-details">
-                                    <div class="border-bottom border-light mb-4">
-                                        <div class="emp-code-label">Employee Name</div>
-                                        <div class="emp-code-data fw-bold text-primary">
-                                            {{
-                                            this.addEmployeeCodeForm.get("employeeName")?.value|| "xxxxx xxxx"}}
-                                        </div>
-                                    </div>
-                                    <div class="border-bottom border-light mb-4">
-                                        <div class="emp-code-label">Employee Code</div>
-                                        <span class="emp-code-data fw-bold text-primary fs-12">
-                                            {{ generatedCode|| "xxxxxxxxxx"}}
-                                        </span>
-                                        <span><mat-icon matSuffix>content_copy</mat-icon></span>
-                                    </div>
-                                    <div class="d-flex align-items-center">
-                                        <a mat-flat-button (click)="decline()"
-                                        class="bg-danger py-3 shadow-sm button-mh-45 me-2 w-50"><mat-icon>close</mat-icon>
-                                        <span>Decline
-                                        </span></a>
-                                    <a mat-flat-button [routerLink]="['/admin/generate-emp-code']"
-                                        class="bg-success py-3 shadow-sm button-mh-45 w-50"><mat-icon>check</mat-icon>
-                                        <span>Approve
-                                        </span></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </mat-card-content>
-                    </mat-card> -->
+                    <div>
+                        <img src="assets/images/gift-selection.png" class="w-100 h-100 pe-4" />
+                    </div>
                 </div>
             </div>
             <!-- /image-section -->
@@ -91,7 +59,6 @@
                                     <mat-icon>celebration</mat-icon>Generate employee Code
                                 </button>
                             </div>
-
                             <!-- <div *ngIf="generatedCode">
                                 <h3>Generated Employee Code:</h3>
                                 <p>{{ generatedCode }}</p>
@@ -111,7 +78,7 @@
 <!-- /container-section -->
 
 <!-- dialog -->
-<ng-template #content>    
+<ng-template #content>
     <mat-dialog-content>
         <div>
             <div class="position-absolute gift-man">
@@ -122,7 +89,7 @@
                     <div class="emp-code-label">Employee Name</div>
                     <div class="emp-code-data fw-bold text-primary">
                         {{
-                            dialogEmployeeName|| "xxxxx xxxx"}}
+                        dialogEmployeeName|| "xxxxx xxxx"}}
                     </div>
                 </div>
                 <div class="border-bottom border-light mb-4">
@@ -130,20 +97,20 @@
                     <span class="emp-code-data fw-bold text-primary fs-12">
                         {{ generatedCode|| "xxxxxxxxxx"}}
                     </span>
-                    <span><mat-icon matSuffix>content_copy</mat-icon></span>
-                </div>                
+                    <span><mat-icon matSuffix cdkCopyToClipboard={{generatedCode}}>content_copy</mat-icon></span>
+                </div>
             </div>
         </div>
     </mat-dialog-content>
     <mat-dialog-actions>
-        <a mat-flat-button (click)="decline()"
-        class="bg-danger py-3 shadow-sm button-mh-45 me-2 w-50" [mat-dialog-close]="true"><mat-icon>close</mat-icon>
-        <span>Decline
-        </span></a>
-    <a mat-flat-button [routerLink]="['/admin/generate-emp-code']" (click)="approve()"
-        class="bg-success py-3 shadow-sm button-mh-45 w-50" mat-dialog-close><mat-icon>check</mat-icon >
-        <span>Approve
-        </span></a>
+        <a mat-flat-button (click)="decline()" class="bg-danger py-3 shadow-sm button-mh-45 me-2 w-50"
+            [mat-dialog-close]="true"><mat-icon>close</mat-icon>
+            <span>Decline
+            </span></a>
+        <a mat-flat-button [routerLink]="['/admin/generate-emp-code']" (click)="approve()"
+            class="bg-success py-3 shadow-sm button-mh-45 w-50" mat-dialog-close><mat-icon>check</mat-icon>
+            <span>Approve
+            </span></a>
     </mat-dialog-actions>
-  </ng-template>
-  <!-- /dialog -->
+</ng-template>
+<!-- /dialog -->
