updated  copy function

--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -97,7 +97,11 @@
                     <span class="emp-code-data fw-bold text-primary fs-12">
                         {{ generatedCode|| "xxxxxxxxxx"}}
                     </span>
-                    <span><mat-icon matSuffix cdkCopyToClipboard={{generatedCode}}>content_copy</mat-icon></span>
+                    <span><mat-icon matSuffix cdkCopyToClipboard={{generatedCode}}
+                            (click)="copied()">content_copy</mat-icon></span>
+                </div>
+                <div *ngIf="isCopied">
+                    <p>copied to clipboard!</p>
                 </div>
             </div>
         </div>
