updated emp code label

--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -86,7 +86,7 @@
             </div>
             <div class="emp-details w-100">
                 <div class="border-bottom border-light mb-4">
-                    <div class="emp-code-label fs-12">Employee Name</div>
+                    <div class="emp-code-label fs-12 pb-2">Employee Name</div>
                     <div class="emp-code-data fw-bold text-primary">
                         {{
                         dialogEmployeeName|| "xxxxx xxxx"}}
