--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.css
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.css
@@ -31,4 +31,14 @@
     font-size: 20px;
   }
 
-  
+.copy-text{
+    position: absolute;
+    bottom: -24px;
+    right: 30px;
+    font-size: 12px;
+    background: black;
+    color: white;
+    border-radius: 5px;  
+    padding: 5px;
+    font-weight: 500;
+  }
