update in open dialog

--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -55,7 +55,7 @@
                             </mat-form-field>
                             <div class="mt-2">
                                 <button mat-flat-button class="button-mh-60 text-white bg-dark shadow-sm w-100 me-2"
-                                    (click)="generateCode()" (click)="openDialog()">
+                                    (click)="generateCode()" (click)="submitForm()">
                                     <mat-icon>celebration</mat-icon>Generate employee Code
                                 </button>
                             </div>
