--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
@@ -29,25 +29,33 @@
         </ng-container>
         <!-- Name Column -->
         <ng-container matColumnDef="couponCode">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Coupon Code</th>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Employee Code</th>
           <td mat-cell *matCellDef="let element">
             {{ element.couponCode }}
           </td>
         </ng-container>
         <!-- Weight Column -->
         <ng-container matColumnDef="productTitle">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Product Title</th>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Employee Name</th>
           <td mat-cell *matCellDef="let element">{{ element.productTitle }}</td>
         </ng-container>
         <!-- Symbol Column -->
-        <ng-container matColumnDef="productDescription">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Product Description</th>
+        <ng-container matColumnDef="department">
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Department</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.productDescription }}
+            {{ element.department }}
           </td>
         </ng-container>
+
+        <ng-container matColumnDef="joiningDate">
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Joining Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.joiningDate}}
+          </td>
+        </ng-container>
+        
         <ng-container matColumnDef="productImage">
-          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Product Image</th>
+          <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">DOB</th>
           <td mat-cell *matCellDef="let element">
             <div class="p-3">
               <img style="height: 50px" src="{{ element.productImage }}" alt="image" />
