--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.css
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.css
@@ -39,6 +39,11 @@
     background: black;
     color: white;
     border-radius: 5px;  
-    padding: 5px;
+    padding: 3px 7px;
     font-weight: 500;
   }
+
+  /* .mat-icon.check {
+    width: 16px !important;
+    height: 16px !important;
+  } */
