--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -11,7 +11,7 @@
                     </div>
                     <p>Quickly craft unique employee codes!</p>
                     <div>
-                        <img src="assets/images/employee-3.png" class="w-100 h-100 pe-4"/>
+                        <img src="assets/images/employee.png" class="w-100 h-100 pe-4"/>
                     </div>
                 </div>
             </div>
