changes in description

--- a/client/webUI/src/app/pages/admin/edit-emp-code/edit-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/edit-emp-code/edit-emp-code.component.html
@@ -7,7 +7,7 @@
             <div class="col-5 pe-4">
                 <div>
                     <div class="banner-font fw-bold">
-                        Create,<span class="text-primary"> EmpCode!</span>
+                       Edit,<span class="text-primary"> EmpCode!</span>
                     </div>
                     <p>Quickly craft unique employee codes!</p>
                     <div>
