--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -7,9 +7,11 @@
             <div class="col-5 pe-4">
                 <div>
                     <div class="banner-font fw-bold">
-                        Create,<span class="text-primary"> EmpCode!</span>
+                        Generate,<span class="text-primary"> EmpCode!</span>
                     </div>
-                    <p>Quickly craft unique employee codes!</p>
+                    <p class="mb-0 mt-2">Quickly craft unique employee codes!
+                       </p>
+                       <p class="mt-0"> Streamline identification and simplify team management with personalized codes.</p>
                     <div>
                         <img src="assets/images/employee.png" class="w-100 h-100 pe-4"/>
                     </div>
