--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
@@ -30,8 +30,13 @@
         <!-- Name Column -->
         <ng-container matColumnDef="couponCode">
           <th mat-header-cell *matHeaderCellDef class="fw-bold bg-light">Employee Code</th>
-          <td mat-cell *matCellDef="let element">
+          <td mat-cell *matCellDef="let element" class="position-relative">
             {{ element.couponCode }}
+            <span class="ms-2"><mat-icon matSuffix cdkCopyToClipboard={{element.couponCode}}
+              (click)="copied(element.couponCode)" class="copy-icon">content_copy</mat-icon></span>
+              <div *ngIf="copiedMap.get(element.couponCode)" class="copy-text fs-12 position-absolute bg-dark text-white">
+                copied
+              </div>
           </td>
         </ng-container>
         <!-- Weight Column -->
